# reasoning_core

./: .gitignore  404.html  LICENSE  README.md  generate_docs.py  index.html  link_notebooks.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/: index.md  template.md
docs/tasks/: arithmetics.md  causal_reasoning.md  coding.md  equation_system.md  formal_maths.md  grammar.md  graph_operations.md  logic.md  planning.md  regex_following.md  rung3_reasoning.md  sequential_induction.md  set_operations.md  table_qa.md
notebooks/: Arithmetics.ipynb  Causal_reasoning.ipynb
notebooks/Arithmetics/: index.html
notebooks/Causal_reasoning/: index.html
rcr_dashboard/: rcr_dashboard.py  requirements.txt
reasoning_core/: __init__.py  downstream_eval.py  generation_worker.py  run_generate.sh  template.py
reasoning_core/tasks/: _causal_utils.py  _logic_utils.py  _reasoning_gym.py  _sat_graph.py  arithmetics.py  causal_reasoning.py  coding.py  equation_system.py  formal_maths.py  grammar.py  graph_operations.py  logic.py  planning.py  regex_following.py  rung3_reasoning.py  sequential_induction.py  set_operations.py  table_qa.py
reasoning_core/utils/: __init__.py  udocker_process.py
search/: search_index.json
site/: 404.html  objects.inv  sitemap.xml
site/search/: search_index.json
site/stylesheets/: extra.css
site/template/: index.html
tasks/arithmetics/: index.html
tasks/causal_reasoning/: index.html
tasks/coding/: index.html
tasks/equation_system/: index.html
tasks/formal_maths/: index.html
template/: index.html
tests/: test_tasks.py
(+22 files in other folders)
